--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -4,12 +4,11 @@ vich_uploader:
         type: attribute
 
     mappings:
-       equipe_image:
-           uri_prefix: /uploads/equipes
-           upload_destination: '%kernel.project_dir%/public/uploads/equipes'
-           namer: Vich\UploaderBundle\Naming\UniqidNamer
-
-        # tournoi_image:
-        #     uri_prefix: /uploads/tournois
-        #     upload_destination: '%kernel.project_dir%/public/uploads/tournois'
-        #     namer: Vich\UploaderBundle\Naming\UniqidNamer
+        equipe_image:
+            uri_prefix: /uploads/equipes
+            upload_destination: '%kernel.project_dir%/public/uploads/equipes'
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
+        tournoi_image:
+            uri_prefix: /uploads/tournois
+            upload_destination: '%kernel.project_dir%/public/uploads/tournois'
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
