--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,14 +1,18 @@
 vich_uploader:
-    db_driver: orm
-    metadata:
-        type: attribute
+  db_driver: orm
+  metadata:
+    type: attribute
 
-    mappings:
-        equipe_image:
-            uri_prefix: /uploads/equipes
-            upload_destination: '%kernel.project_dir%/public/uploads/equipes'
-            namer: Vich\UploaderBundle\Naming\UniqidNamer
-        tournoi_image:
-            uri_prefix: /uploads/tournois
-            upload_destination: '%kernel.project_dir%/public/uploads/tournois'
-            namer: Vich\UploaderBundle\Naming\UniqidNamer
+  mappings:
+    equipe_image:
+      uri_prefix: /uploads/equipes
+      upload_destination: "%kernel.project_dir%/public/uploads/equipes"
+      namer: Vich\UploaderBundle\Naming\UniqidNamer
+    tournoi_image:
+      uri_prefix: /uploads/tournois
+      upload_destination: "%kernel.project_dir%/public/uploads/tournois"
+      namer: Vich\UploaderBundle\Naming\UniqidNamer
+    utilisateur_photo:
+      uri_prefix: /uploads/profils
+      upload_destination: "%kernel.project_dir%/public/uploads/profils"
+      namer: Vich\UploaderBundle\Naming\UniqidNamer
