--- a/config/packages/fos_ckeditor.yaml
+++ b/config/packages/fos_ckeditor.yaml
@@ -3,10 +3,15 @@
 twig:
     form_themes:
         - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
+
 fos_ck_editor:
     configs:
-        default:
-            toolbar: [ "bold", "italic", "link", "bulletedlist", "numberedlist", "image", "blockquote", "undo", "redo" ]
-            uiColor: "#ffffff"
-    base_path: "build/ckeditor"
-    js_path:   "build/ckeditor/ckeditor.js"
+        main_config:
+            toolbar:
+                - { name: "styles", items: 
+                ['Bold', 'Italic', 'Underline', 'Strike', 'Blockquote', '-', 
+                'Link', '-', 'RemoveFormat', '-', 'NumberedList', 'BulletedList', 
+                '-', 'Outdent', 'Indent', '-', '-', 'JustifyLeft', 'JustifyCenter', 
+                'JustifyRight', 'JustifyBlock', '-', 'Image', 'Table', '-', 'Styles', 
+                'Format','Font','FontSize', '-', 'TextColor', 'BGColor', 'Source'] }
+            
