--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "easycorp/easyadmin-bundle": "^4.8",
         "eckinox/tinymce-bundle": "^0.1.5",
         "knplabs/knp-paginator-bundle": "^6.3",
+        "lcobucci/jwt": "^4.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "symfony/asset": "6.3.*",
