--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -16,3 +16,7 @@ vich_uploader:
       uri_prefix: /uploads/profils
       upload_destination: "%kernel.project_dir%/public/uploads/profils"
       namer: Vich\UploaderBundle\Naming\UniqidNamer
+    jeu_logo:
+      uri_prefix: /uploads/jeux
+      upload_destination: "%kernel.project_dir%/public/uploads/jeux"
+      namer: Vich\UploaderBundle\Naming\UniqidNamer
